--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -1,8 +1,8 @@
-{{> header heading=title}}
 <div>
-    <div>
-        <h1>Device {{device}}</h1>
-        <h2>Type: {{type}}</h2>
+    {{> header heading=title}}
+    <div class="device-info">
+        <h3>Device: {{device}}</h3>
+        <p>Type: {{type}}</p>
     </div>
 </div>
 <div>
