--- a/assets/style.css
+++ b/assets/style.css
@@ -1,57 +1,80 @@
-*{
-    padding: 0;
-    margin:0;
-    box-sizing: border-box;
-}
-
-html {
-    height: 100%;
-}
-
-body {
-    box-sizing: border-box;
-}
-
-.bar {
-    padding: 18px;
-    box-shadow: 2px 0px 30px -10px rgba(0,0,0,0.5);
-}
-
-.device-info {
-    display: flex;
-    flex-direction: column;
-    align-items: flex-start;
-    justify-content: center;
-    margin-top: 100px;
-}
-
-.device-info h3 {
-    padding: 18px;
-    border: 1px solid orange;
-}
-
-.write-container {
+.toggle-cardWrite {
     display: none;
     position: fixed;
     top: 0;
+    right: 0;
     bottom: 0;
     left: 0;
-    right: 0;
-    background-color: rgba(0,0,0,0.9);
-    z-index: 100;
-    height: 100vh;
-    width: 100vw;
+    background-color: rgba(0, 0, 0, 0.8);
+    justify-content: center;
+    align-items: center;
 }
 
-.write {
-    height: 500px;
-    width: 400px;
+.closem {
+    cursor: pointer;    
+}
+
+.myDropdownSideNav {
+    opacity: 1;
+    width: 300px;
+    display: block;
+    top: 100px;
+    overflow-x: hidden;
+    color: #333;
+}
+
+.myDropdownSideNav nav i{
+    color: #333 !important;
+}
+
+.btnCenter {
+    margin: 0 25%;
+}
+
+.dropHeight {
+    display: none;
+}
+
+#navvy {
     position: fixed;
-    box-shadow: 0px 0px 50px -20px rgba(199, 78, 78, 0.5);
-    left: 50%;
-    transform: translateX(-200px);
-    z-index: 150;
-    background-color: lightskyblue;
+    top: 0;
+    z-index: 900;
+}
+
+.user-container {
+    position: fixed;
+    display: none;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    background-color: rgba(0, 0, 0, 0.8);
+    justify-content: center;
+    align-items: center;
+    z-index: 900;
+}
+
+.user-data {
+    width: 90vw;
+    height: 90vh;
     border-radius: 12px;
-    top: 50px;
+    background-color: #f3f3f3;
+    margin:  20px auto;
+}
+
+.user-close {
+    transform: translateX(-20px) translateY(20px);
+    cursor: pointer;
+}
+
+@media only screen and (min-width: 900px) {
+    .body-holder-artraun {
+        margin-top: 100px;
+    }
+}
+
+@media only screen and (max-width: 899px) {
+    .body-holder-artraun {
+        margin-top: 50px;
+    }
 }
